--- a/.screenrc
+++ b/.screenrc
@@ -1,2 +1,32 @@
-# Disable the startup message
-startup_message off
+## ~/.screenrc startup file for GNU Screen.
+## Jeff
+## --
+## $Id: _screenrc,v 1.4 2005/11/20 21:00:35 steve Exp $
+##
+## skip the startup message
+startup_message off 
+
+## go to home dir
+#chdir
+
+## Automatically detach on hangup.
+autodetach on
+
+## Change default scrollback value for new windows
+defscrollback 6000
+
+## start with visual bell as default
+vbell off 
+vbell_msg "bell on %t (%n)"
+
+## look and feel
+caption always "%{= bb}%{+b w}%n %h %=%t %c"
+hardstatus alwayslastline "%-Lw%{= BW}%50>%n%f* %t%{-}%+Lw%<"
+
+activity "Activity in %t(%n)"
+
+shelltitle "shell"
+
+
+## Lock screen if idle for 5 minutes 
+idle 200 lockscreen 
